# TF4

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_db_sqlite3
.github/workflows/: ci.yml
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
diary/management/commands/: add_objects.py  send_mailings.py
diary/migrations/: 0001_initial.py  0002_initial.py  0003_alter_diary_content.py  0004_alter_diaryentries_options.py  0005_alter_diaryentries_options_remove_diaryentries_owner_and_more.py
diary/templates/diary/: category_delete.html  category_detail.html  category_form.html  category_list.html  category_products.html  contacts.html  diary_confirm_delete.html  diary_delete.html  diary_detail.html  diary_form.html  diary_list.html  diaryentries_confirm_delete.html  entries_delete.html  entries_detail.html  entries_diary.html  entries_form.html  entries_list.html  entries_products.html  home.html  product_delete.html  product_detail.html  product_form.html  product_list.html  template.html
nginx/: Dockerfile  nginx.conf
users/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
users/management/commands/: create_group.py  create_user.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0003_user_token.py
users/templates/registration/: login.html  password_recovery.html  password_reset.html  password_set_new.html
(+7 files in other folders)
