[tool.poetry]
name = "tf4"
version = "0.1.0"
description = ""
authors = ["Admin <alexander_kozhanov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.4"
python-dotenv = "^1.1.1"
pillow = "^11.3.0"
redis = "^6.2.0"
flake8 = "^7.3.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
